--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* @import '@angular/material/prebuilt-themes/deeppurple-amber.css'; */
+
+/* This is to add the styles to the Angular Material */
+/* @import '@angular/material/prebuilt-themes/indigo-pink.css'; */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; */
+
+/* To add bootstrap Styling */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body{
+    background-color: #ececec;
+}
